Edited wiki page through web user interface.

--- a/wiki/Fixed37.wiki
+++ b/wiki/Fixed37.wiki
@@ -1,5 +1,9 @@
 #labels Featured
 = 2008-08-07 修正多继承中判断接口的功能，以及修正接口继承后的判断功能 =
+更新：
+
+jcore\jsonrpc\common\ObjectToJSON.java
+
 {{{
 	/***************************************************************************
 	 * 判断对象o实现的所有接口中是否有szInterface 
